# gunicorn_performance_fix_showcase

./: .env  .gitignore  Makefile  README.md  docker-compose.yaml
app_fixed/: Dockerfile.client  gunicorn.py.ini  pyproject.toml
app_fixed/gunicorn/workers/: ggevent.py
app_with_bug/: Dockerfile  app.py  client.py  gunicorn.py.ini  pyproject.toml
